--- a/res/drawable/btn_action_bar.xml
+++ b/res/drawable/btn_action_bar.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true" 
           android:state_pressed="false" 
-          android:drawable="@drawable/prsnl_header_button" />
+          android:drawable="@drawable/header_button" />
     <item android:state_focused="true" 
           android:state_pressed="true"
-          android:drawable="@drawable/prsnl_header_button_pressed" />
+          android:drawable="@drawable/header_button_pressed" />
     <item android:state_enabled="false" 
-          android:drawable="@drawable/prsnl_header_button_pressed" />
+          android:drawable="@drawable/header_button_pressed" />
     <item android:state_focused="false" 
           android:state_pressed="true"
-      android:drawable="@drawable/prsnl_header_button_pressed" />
-    <item android:drawable="@drawable/prsnl_header_button" />
+      android:drawable="@drawable/header_button_pressed" />
+    <item android:drawable="@drawable/header_button" />
 </selector>
