--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -22,4 +22,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="HeaderTitleWhiteShadowText" parent="WhiteShadowText">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="GreyBoldShadowText" parent="android:Widget.TextView">
+        <item name="android:shadowColor">#FFFFFF</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#565858</item>
+    </style>
 </resources>
