--- a/res/layout/restaurant_banner.xml
+++ b/res/layout/restaurant_banner.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/banner"
-        android:contentDescription="@string/banner_descr" />
+        android:contentDescription="@string/descr_banner" />
 
 </RelativeLayout>
