--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -2,5 +2,5 @@
 <resources>
    <dimen name="actionbar_height">45dp</dimen> 
    <dimen name="table_btn_text_size">24sp</dimen>
-   <dimen name="list_items_heght">56dp</dimen>
+   <dimen name="list_items_height">56dp</dimen>
 </resources>
