--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,4 +35,28 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#565858</item>
     </style>
+
+    <style name="GroupSubtitleWhiteShadowText" parent="WhiteShadowText">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="GroupTitleWhiteShadowText" parent="WhiteShadowText">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="BlackShadowText" parent="android:Widget.TextView">
+        <item name="android:shadowColor">#FFFFFF</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:textColor">#323232</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="GroupChildTitleBlackShadowText" parent="BlackShadowText">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
