--- a/res/layout/restaurant_banner.xml
+++ b/res/layout/restaurant_banner.xml
@@ -10,7 +10,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/banner"
-        android:contentDescription="@string/descr_banner" />
+        android:contentDescription="@string/descr_banner"
+        android:src="@drawable/banner" />
+
+    <ProgressBar
+        android:id="@+id/bannerProgressBar"
+        style="@android:style/Widget.ProgressBar.Small.Inverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
