part of the table bill activity

--- a/res/layout/table_bill.xml
+++ b/res/layout/table_bill.xml
@@ -5,43 +5,11 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:id="@+id/actionBar"
+        android:id="@+id/actionBarTitle"
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:background="@drawable/navbar"
         android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/action_bar_payment"
-            style="@style/BottomActionButtonWhiteShadowText"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/btn_action_bar"
-            android:drawableTop="@drawable/btn_payment"
-            android:gravity="center"
-            android:onClick="payment"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="4dp"
-            android:text="@string/btn_payment" />
-
-        <Button
-            android:id="@+id/action_bar_add"
-            style="@style/BottomActionButtonWhiteShadowText"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/action_bar_payment"
-            android:background="@drawable/btn_action_bar"
-            android:drawableTop="@drawable/btn_add"
-            android:gravity="center"
-            android:onClick="add"
-            android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:paddingTop="2dp"
-            android:text="@string/btn_add" />
 
         <TextView
             android:id="@+id/actionbarTitle"
@@ -62,14 +30,87 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/action_bar_add"
             android:layout_toRightOf="@id/actionbarTitle"
             android:ellipsize="end"
             android:lines="1"
             android:paddingLeft="8dp"
             android:singleLine="true"
             android:text="@string/random_value" />
+        
+        <TextView
+            android:id="@+id/actionbarTotalCurrency"
+            style="@style/HeaderTitleWhiteShadowText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/actionbarTotalValue"
+            android:ellipsize="end"
+            android:lines="1"
+            android:paddingLeft="4dp"
+            android:singleLine="true"
+            android:text="@string/currency_ron" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/actionBar"
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/navbar"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/action_bar_add"
+            style="@style/BottomActionButtonWhiteShadowText"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="@drawable/btn_action_bar"
+            android:drawableTop="@drawable/btn_add"
+            android:gravity="center"
+            android:onClick="add"
+            android:paddingTop="4dp"
+            android:text="@string/btn_add" />
+
+        <Button
+            android:id="@+id/action_bar_payment"
+            style="@style/BottomActionButtonWhiteShadowText"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="@drawable/btn_action_bar"
+            android:drawableTop="@drawable/btn_payment"
+            android:gravity="center"
+            android:onClick="payment"
+            android:paddingTop="4dp"
+            android:text="@string/btn_payment" />
+
+        <Button
+            android:id="@+id/action_bar_delete"
+            style="@style/BottomActionButtonWhiteShadowText"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="@drawable/btn_action_bar"
+            android:drawablePadding="-6dp"
+            android:drawableTop="@android:drawable/ic_delete"
+            android:gravity="center"
+            android:onClick="deleteBill"
+            android:paddingTop="-6dp"
+            android:text="@string/btn_delete" />
+
+        <Button
+            android:id="@+id/action_bar_done"
+            style="@style/BottomActionButtonWhiteShadowText"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="@drawable/btn_action_bar"
+            android:drawableTop="@drawable/btn_done"
+            android:gravity="center"
+            android:onClick="done"
+            android:paddingTop="6dp"
+            android:text="@string/btn_done" />
+    </LinearLayout>
 
     <ListView
         android:id="@id/android:list"
